--- a/templates/web/bonus.html
+++ b/templates/web/bonus.html
@@ -7,24 +7,24 @@
     <div class="content-wrapper" id="demo2">
         <section>
             <div class="row">
-            {% for bonus_for_usk_agent in agent_bonus %}
-                <div class="col-lg-3 col-md-4 col-sm-6 col-6 pb-3 software-card-margin ">
-                    <a href="">
-                        <div class="card">
-                            <div class="card-body-bonus">
-                                <img src="{{bonus_for_usk_agent.image.url}}" alt="">
-                            </div>
-                            <div class="head-name">
-                                <h6>{{bonus_for_usk_agent.name}}</h6> 
-                             </div>
+                {% for bonus_for_usk_agent in agent_bonus %}
+                <div class="col-lg-3 col-md-4 col-sm-6 col-6 grid-margin">
+                    <div class="card">
+                        <div class="card-body-bonus">
+                            <img src="{{bonus_for_usk_agent.image.url}}" alt="">
                         </div>
-                    </a>
-                    <div class="row row-width">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-6 access-button">
-                            <a href="{{bonus_for_usk_agent.detail_link}}" style="color: #fff;" rel="noopener noreferrer" target="_blank">ACCESS</a>
+                        <div class="head-name">
+                            <h6>{{bonus_for_usk_agent.name}}</h6>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-6 access-button">
-                            <a href="{{bonus_for_usk_agent.detail_link}}" style="color: #fff;" rel="noopener noreferrer" target="_blank">DETAILS</a>
+                    </div>
+                    <div class="d-flex">
+                        <div class="w-50 access-button mr-1">
+                            <a href="{{bonus_for_usk_agent.detail_link}}" style="color: #fff;" rel="noopener noreferrer"
+                                target="_blank">ACCESS</a>
+                        </div>
+                        <div class="w-50 access-button">
+                            <a href="{{bonus_for_usk_agent.detail_link}}" style="color: #fff;" rel="noopener noreferrer"
+                                target="_blank">DETAILS</a>
                         </div>
                     </div>
 
@@ -41,7 +41,7 @@
                     </div>
                     {% endcomment %}
                 </div>
-             {% endfor %}
+                {% endfor %}
             </div>
         </section>
     </div>
