--- a/templates/web/important-poster-searching.html
+++ b/templates/web/important-poster-searching.html
@@ -6,7 +6,7 @@
 
 
   <div class="col-lg-3 col-md-4 col-sm-6 col-6">
-    <div class="container__img-holder">
+    <div class="card card-body w-100">
       <img src="{{posters.image.url}}" data-id="{{posters.id | apnumber }}" alt="Image">
 
       <div class="text-center mt-3">
