--- a/templates/web/add-on-services.html
+++ b/templates/web/add-on-services.html
@@ -7,8 +7,7 @@
         <section>
             <div class="row ">
                 {% for addon_services in addon_services %}
-                <div class="col-lg-3 col-md-4 col-sm-6 col-6 pb-3 software-card-margin ">
-                    <a href="">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-6 grid-margin">
                         <div class="card">
                             <div class="card-body">
                                 <img src="{{addon_services.image.url}}" alt="">
@@ -18,12 +17,11 @@
                              </div>
                         </div>
                         
-                    </a>
-                    <div class="row row-width">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-6 access-button">
+                    <div class="d-flex">
+                        <div class="w-50 access-button mr-1">
                             <a href="{{addon_services.detail_link}}" rel="noopener noreferrer" target="_blank" style="color: #fff;">ACCESS</a>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-6 access-button">
+                        <div class="w-50 access-button">
                             <a href="{{addon_services.detail_link}}" rel="noopener noreferrer" target="_blank" style="color: #fff;">DETAILS</a>
                         </div>
                     </div>
