--- a/templates/web/festival-poster-searching.html
+++ b/templates/web/festival-poster-searching.html
@@ -5,7 +5,7 @@
   {% for festive_poster in festivel_poster %}
 
   <div class="col-lg-3 col-md-4 col-sm-6 col-6">
-    <div class="container__img-holder">
+    <div class="card card-body w-100">
       <img src="{{festive_poster.image.url}}" data-id="{{festive_poster.id | apnumber }}" alt="Image">
 
       <div class="text-center mt-3">
