--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -1,14 +1,8 @@
 {% extends 'web/base.html' %}
-
 {% load static humanize %}
-
 {% block content %}
 
-
 {% csrf_token %}
-
-
-
 <style>
   .popup a {
     text-decoration: none;
@@ -24,10 +18,11 @@
   }
 
   .popup {
-    min-width: 400px;
-    width: 40%;
+    width: 800px;
+    min-width: 800px;
+    max-width: 90%;
     min-height: 150px;
-    margin: 40px 415px;
+    margin: 40px auto;
     background: #fff;
     opacity: 0.9;
     position: relative;
@@ -149,15 +144,13 @@
         <span class="text1">
 
           <marquee><b>{{latest_news.news}}</b>
-            {% if latest_news.link == None %}
+            {% if not latest_news.link %}
             <span></span>
             {% else %}
             <span> <a href="{{latest_news.link}}" rel="noopener noreferrer" target="_blank" class="news">Click
                 Here</a></span>
             {% endif %}
           </marquee>
-
-
         </span>
       </div>
     </section>
@@ -178,7 +171,6 @@
     </div>
 
 
-
     <section>
       <div class="row">
         <div class="col-lg-6 col-md-12 col-sm-12 col-12">
@@ -187,23 +179,21 @@
             <div class="row">
               {% for posters in new_service_poster %}
               <div class="col-lg-6 col-md-6 col-sm-6 col-6">
-                <div class="container__img-holder">
+                <div class="card card-body w-100">
                   <img src="{{posters.image.url}}" data-id="{{posters.id | apnumber }}" alt="Image">
+                  <span>{{posters.title}}</span>
 
                   <div class="text-center mt-3">
-                    <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
-                      data-source="{{posters.id | apnumber }}">Click to Download</button>
+                    <button class="btn-sm btn btn-primary" target="_blank" rel="noopener noreferrer" data-source="{{posters.id | apnumber }}">Download</button>
+                    <a href="{{posters.detail_link}}" class="btn btn-info btn-sm">Details</a>
                   </div>
-                  <div class="detail-button">
-                    <a href="{{posters.detail_link}}" style=" color: #fff;">Details</a>
-                  </div>
-                  <span>{{posters.title}}</span>
+                  
                 </div>
               </div>
               {% endfor %}
               <div class="row">
-                <div class="col-lg-12 col-12">
-                  <a href="{% url 'web:newly_added_services' %}" class="poster-view-more">
+                <div class="col-lg-12 col-12 mt-3">
+                  <a href="{% url 'web:newly_added_services' %}" class="poster-view-more d-inline-block">
                     View More
                   </a>
                 </div>
@@ -230,23 +220,21 @@
             <div class="row">
               {% for posters in important_poster %}
               <div class="col-lg-6 col-md-6 col-sm-6 col-6">
-                <div class="container__img-holder">
+                <div class="card card-body w-100">
                   <img src="{{posters.image.url}}" data-id="{{posters.id | apnumber }}" alt="Image">
+                  <span>{{posters.title}}</span>
 
                   <div class="text-center mt-3">
-                    <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
-                      data-source="{{posters.id | apnumber }}">Click to Download</button>
+                    <button class="btn-sm btn btn-primary" target="_blank" rel="noopener noreferrer" data-source="{{posters.id | apnumber }}">Download</button>
+                    <a href="{{posters.detail_link}}" class="btn btn-info btn-sm">Details</a>
                   </div>
-                  <div class="detail-button">
-                    <a href="{{posters.detail_link}}" style=" color: #fff;">Details</a>
-                  </div>
-                  <span>{{posters.title}}</span>
+
                 </div>
               </div>
               {% endfor %}
               <div class="row">
-                <div class="col-lg-12 col-12">
-                  <a href="{% url 'web:add_on_services' %}" class="poster-view-more">
+                <div class="col-lg-12 col-12 mt-3">
+                  <a href="{% url 'web:add_on_services' %}" class="poster-view-more d-inline-block">
                     View More
                   </a>
                 </div>
