--- a/templates/web/marketing-tip.html
+++ b/templates/web/marketing-tip.html
@@ -7,22 +7,20 @@
         <section>
             <div class="row">
                 {% for tips in marketing_tips %}
-                <div class="col-lg-3 col-md-4 col-sm-6 col-6 pb-3 software-card-margin ">
-                    <a href="">
-                        <div class="card">
-                            <div class="card-body-tip">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-6 grid-margin">
+                    <div class="card card-body">
+                        <div class="card-image">
                                 <img src="{{tips.image.url}}" alt="">
                             </div>
                             <div class="head-name">
                                 <h6>{{tips.name}}</h6> 
                              </div>
                         </div>
-                    </a>
-                    <div class="row row-width">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-6 access-button">
+                    <div class="d-flex">
+                        <div class="w-50 access-button mr-1">
                             <a href="{{tips.detail_link}}" style="color: #fff;" rel="noopener noreferrer" target="_blank">ACCESS</a>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-6 access-button">
+                        <div class="w-50 access-button">
                             <a href="{{tips.detail_link}}" style="color: #fff;" rel="noopener noreferrer" target="_blank">DETAILS</a>
                         </div>
                     </div>
