--- a/templates/web/professional-poster-searching.html
+++ b/templates/web/professional-poster-searching.html
@@ -7,7 +7,7 @@
   {% for prof_posters in professional_poster %}
 
   <div class="col-lg-3 col-md-4 col-sm-6 col-6">
-    <div class="container__img-holder">
+    <div class="card card-body w-100">
       <img src="{{prof_posters.image.url}}" data-id="{{prof_posters.id | apnumber }}" alt="Image">
 
       <div class="text-center mt-3">
