--- a/static/web/css/custom.css
+++ b/static/web/css/custom.css
@@ -41,7 +41,7 @@
 .buynow_button {
     background-color: #00409f;
     color: #fff;
-    padding: 7px 10px;
+    padding: 8px 10px;
     margin: 0px 9px;
     font-size: 14px;
     text-align: center;
@@ -144,14 +144,7 @@
     }
 
     .label-file {
-        display: block;
-        margin: 0 auto;
-        padding: 7px 10px;
-        background-color: #00409f;
-        color: #fff;
-        border-radius: 13px;
-        font-size: 10px;
-        text-align: center;
+        margin-left: 30px;
     }
 
     .save_button {
@@ -168,11 +161,12 @@
     .buynow_button {
         background-color: #00409f;
         color: #fff;
-        padding: 7px 10px;
-        font-size: 10px;
-        margin: 0px 8px;
+        padding: 9px 10px;
+        font-size: 14px;
+        /* margin: 0px 20px; */
+        margin-left: 27px;
         text-align: center;
-        border-radius: 13px
+        border-radius: 13px;
     }
 }
 .navbar-toggler:focus {
@@ -216,7 +210,7 @@ input[type="submit"] {
     text-align: center;
     border-radius: 6px;
     padding: 5px 0;
-    margin-top: -52px;
+    margin-top: -2px;
     margin-left: 102px;
     /* Position the tooltip */
     position: absolute;
