--- a/static/web/css/custom.css
+++ b/static/web/css/custom.css
@@ -226,6 +226,10 @@ input[type="submit"] {
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
+canvas {
+    max-width: 100%;
+    object-fit: contain;
+}
 
 @media only screen and (min-width: 320px) and (max-width:567px) {
     .detail-button {
