--- a/templates/invoice/customer_list.html
+++ b/templates/invoice/customer_list.html
@@ -1,109 +1,65 @@
 {% extends 'web/base.html' %}
-{% block content %}
 {% load static %}
 
-<link rel="stylesheet" href="{% static 'invoice/css/bootstrap-table.css' %}">
-<link rel="stylesheet" href="{% static 'invoice/css/bootstrap.min.css' %}">
+{% block css_plugins %}
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.13.1/datatables.min.css" />
+{% endblock %}
+
+{% block js %}
+<script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.13.1/datatables.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#example').DataTable();
+    });
+</script>
+{% endblock %}
 
 
-<style>
-    .paginate_button {
-    color: #2C2420;
-    padding: 0px 5px;
-}
-.paginate_button:hover {
-    color: #2C2420;
-    padding: 0px 5px;
-}
-.current{
-    border: 1px solid #C2976D ;
-    padding: 0px 10px;
-    background:#C2976D !important;
-    border-radius: 7px;
-}
-.table {
-    background: linear-gradient(135deg, #EDEDED 0%, #FFFFFF 100%) !important;
-    box-shadow: -2px 2px 4px rgb(194 194 194 / 20%), 2px -2px 4px rgb(194 194 194 / 20%), -2px -2px 4px rgb(255 255 255 / 90%), 2px 2px 5px rgb(194 194 194 / 90%), inset 1px 1px 2px rgb(255 255 255 / 30%), inset -1px -1px 2px rgb(194 194 194 / 50%);
-    border-radius: 3.88604px;
-}
-.border {
-    border-bottom: 1px solid rgba(58, 35, 22, 0.5) !important;
-}
-.td-color{
-    background-color: #FFFFFF;
-    border: none;
-}
-tbody, td, tfoot, th, thead, tr {
-    border: none !important;
-}
-</style>
-
+{% block content %}
 <div class="main-panel " id="demo">
     <div class="content-wrapper" id="demo2">
-
-        
-        <!-- <div>
-        <ul>
-            {% for profile in object_list %}
-                <li>{{ profile.name }}  | <a
-                        href="{% url 'invoices:customer-update' profile.pk %}">edit</a>
-                    <a href="{% url 'invoices:customer-delete' profile.pk %}">delete</a>
-                </li>
-            {% empty %}
-                <li>No profile yet.</li>
-            {% endfor %}
-
-        </ul>
-        <p>
-          <a href="{% url 'invoices:customer-add' %}">add a profile</a>
-        </p>
-        <p>
-          <a href="{% url 'invoices:invoice-list' %}"> add invoices</a>
-        </p>
-
-    </div> -->
-
         <div class="row ">
-            
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                 <h5 class="customer-list-head pb-4">Customer List: </h5>
-                <div style="overflow-x: auto;">
-                    <table id="example" class="table" style="width:100%;">
-                        <thead>
-                            <tr class="border">
-                                <th>Name</th>
-                                <th>Phone</th>
-                                <th>Email Id</th>
-                                <th>Edit</th>
-                                <th>Delete</th>
-                            </tr>
-                        </thead>
-                        <tbody  class="td-color">
-                            {% for profile in object_list %}
-                            <tr>
-                                <td>{{ profile.name }}</td>
-                                <td>{{ profile.phone_no }}</td>
-                                <td>{{ profile.email }}</td>
-                                <td>
-                                    <a href="{% url 'invoices:customer-update' profile.pk %}">
-                                        <i class="fa-solid fa-pen-to-square edit-edit"></i>
-                                    </a>
-                                </td>
-                                <td>
-                                    <a href="{% url 'invoices:customer-delete' profile.pk %}">
-                                        <i class="fa-solid fa-trash delete-delete"></i>
-                                    </a>
-                                </td>
-                            </tr>
-                            {% empty %}
-                            <td>No profile yet.</td>
-                            {% endfor %}
-                        </tbody>
-    
-                    </table>
-                   
+                <div class="card card-body">
+                    <div class="table-responsive">
+                        <table id="example" class="table table-bordered" style="width:100%;">
+                            <thead>
+                                <tr class="border">
+                                    <th>Name</th>
+                                    <th>Phone</th>
+                                    <th>Email Id</th>
+                                    <th>Edit</th>
+                                    <th>Delete</th>
+                                </tr>
+                            </thead>
+                            <tbody class="td-color">
+                                {% for profile in object_list %}
+                                <tr>
+                                    <td>{{ profile.name }}</td>
+                                    <td>{{ profile.phone_no }}</td>
+                                    <td>{{ profile.email }}</td>
+                                    <td>
+                                        <a href="{% url 'invoices:customer-update' profile.pk %}">
+                                            <i class="fa-solid fa-pen-to-square edit-edit"></i>
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <a href="{% url 'invoices:customer-delete' profile.pk %}">
+                                            <i class="fa-solid fa-trash delete-delete"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                                {% empty %}
+                                <td colspan="5">No profile yet.</td>
+                                {% endfor %}
+                            </tbody>
+
+                        </table>
+                    </div>
                 </div>
-                
+
+
                 <div class="row">
                     <div class="col-lg-2 col-md-3 col-sm-4 col-4">
                         <a href="{% url 'invoices:customer-add' %}">
@@ -121,20 +77,9 @@ tbody, td, tfoot, th, thead, tr {
                     </div>
                 </div>
             </div>
-           
+
         </div>
 
     </div>
 </div>
-
-
-<script src="{% static 'invoice/js/data-table.js' %}"></script>
-<script src="{% static 'invoice/js/dataTable.min.js' %}"></script>
-<script src="{% static 'invoice/js/jquery.min.js' %}"></script>
-<script>
-    $(document).ready(function () {
-        $('#example').DataTable();
-    });
-</script>
-
 {% endblock %}
