--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -15,8 +15,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="{% static 'web/css/owl.theme.default.css' %}">
-  <link rel="stylesheet" href="{% static 'web/css/style.css' %}">
-  <link rel="stylesheet" href="{% static 'web/css/custom.css' %}">
+  <link rel="stylesheet" href="{% static 'web/css/style.css' %}?v=1.0">
+  <link rel="stylesheet" href="{% static 'web/css/custom.css' %}?v=1.0">
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
   <script>
     window.OneSignal = window.OneSignal || [];
