--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -29,24 +29,25 @@
 
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
   <script>
-  window.OneSignal = window.OneSignal || [];
-  OneSignal.push(function() {
-    OneSignal.init({
-      appId: "3d531d32-fe15-4b93-80b3-0746517b0021",
-      safari_web_id: "web.onesignal.auto.009a4322-838f-4341-bf26-c81fd75aa063",
-      notifyButton: {
-        enable: true,
-      },
+    window.OneSignal = window.OneSignal || [];
+    OneSignal.push(function () {
+      OneSignal.init({
+        appId: "3d531d32-fe15-4b93-80b3-0746517b0021",
+        safari_web_id: "web.onesignal.auto.009a4322-838f-4341-bf26-c81fd75aa063",
+        notifyButton: {
+          enable: true,
+        },
+      });
     });
-  });
   </script>
 
 </head>
 
 <body>
-
 
   <div class="container-scroller">
     {% include 'web/partials/header.html' %}
