--- a/static/web/css/custom.css
+++ b/static/web/css/custom.css
@@ -249,3 +249,8 @@ canvas {
         margin: 2px auto;
     }
 }
+.card-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
