--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -84,6 +84,42 @@
     width: 100%;
     height: auto;
   }
+  @media only screen and (min-width:320px) and (max-width:567px) {
+    .onload-image {
+    width: 80%;
+    height: auto;
+  }
+  .popup {
+    width: 690px;
+    min-width: 399px;
+    max-width: 40%;
+    min-height: 150px;
+    margin: 40px auto;
+    background: #fff;
+    opacity: 0.9;
+    position: relative;
+    z-index: 10;
+    padding: 15px 35px;
+    /* box-shadow: 0 2px 5px #000; */
+    border-radius: 29px;
+}
+  }
+  @media only screen and (min-width:568px) and (max-width:770px) {
+    .popup {
+    width: 800px;
+    min-width: 642px;
+    max-width: 74%;
+    min-height: 150px;
+    margin: 40px auto;
+    background: #fff;
+    opacity: 0.9;
+    position: relative;
+    z-index: 10;
+    padding: 15px 35px;
+    /* box-shadow: 0 2px 5px #000; */
+    border-radius: 29px;
+}
+  }
 </style>
 
  
