--- a/templates/web/agency-portal.html
+++ b/templates/web/agency-portal.html
@@ -7,13 +7,13 @@
         <section>
             <div class="row">
                 {% for portals in agency_portal %}
-                <div class="col-lg-3 col-md-4 col-sm-6 col-6 grid-margin">
-                    <div class="card card-body">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-6 grid-margin">
+                    <div class="card">
                         <div class="card-image">
                             <img src="{{portals.image.crop.194x194}}" alt="">
                         </div>
                         <div class="head-name">
-                            <h6>{{portals.name}}</h6>
+                            <h6 style="color:#000 ;">{{portals.name}}</h6>
                         </div>
                     </div>
                     <div class="d-flex">
