--- a/templates/web/back-office-services.html
+++ b/templates/web/back-office-services.html
@@ -7,13 +7,13 @@
         <section>
             <div class="row">
                 {% for services in back_office_services %}
-                <div class="col-lg-3 col-md-4 col-sm-6 col-6 grid-margin">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-6 grid-margin">
                     <div class="card">
                         <div class="card-body-office">
                             <img src="{{services.image.crop.194x194}}" alt="">
                         </div>
                         <div class="head-name">
-                            <h6>{{services.name}}</h6>
+                            <h6 style="color:#000 ;">{{services.name}}</h6>
                         </div>
                     </div>
                     <div class="d-flex">
