--- a/templates/web/marketing-tip.html
+++ b/templates/web/marketing-tip.html
@@ -7,13 +7,13 @@
         <section>
             <div class="row">
                 {% for tips in marketing_tips %}
-                <div class="col-lg-3 col-md-4 col-sm-6 col-6 grid-margin">
-                    <div class="card card-body">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-6 grid-margin">
+                    <div class="card">
                         <div class="card-image">
                                 <img src="{{tips.image.url}}" alt="">
                             </div>
                             <div class="head-name">
-                                <h6>{{tips.name}}</h6> 
+                                <h6 style="color:#000 ;">{{tips.name}}</h6> 
                              </div>
                         </div>
                     <div class="d-flex">
