--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -3,150 +3,11 @@
 {% block content %}
 
 {% csrf_token %}
-<style>
-  .popup a {
-    text-decoration: none;
-  }
 
-  .popup-onload {
-    width: 100%;
-    margin: 0 auto;
-    position: fixed;
-    z-index: 100;
-    background: #01010ebf;
-    height: 100vh;
-  }
-
-  .popup {
-    width: 800px;
-    min-width: 800px;
-    max-width: 90%;
-    min-height: 150px;
-    margin: 40px auto;
-    background: #fff;
-    opacity: 0.9;
-    position: relative;
-    z-index: 10;
-    padding: 15px 35px;
-    /* box-shadow: 0 2px 5px #000; */
-    border-radius: 29px;
-  }
-
-  .popup p {
-    color: #fff;
-    /* text-align: justify; */
-    font-size: 1.25rem;
-    line-height: 1.6;
-    font-weight: 400;
-    font-family: "Nunito Sans", sans-serif;
-  }
-
-  .popup p a {
-    color: #b18d73;
-    font-weight: 400;
-  }
-
-  .x {
-    color: #b18d73;
-    font-size: 2rem;
-    line-height: 1.6;
-    font-weight: 400;
-    font-family: "Nunito Sans", sans-serif;
-    text-decoration: none;
-    position: absolute;
-    right: 15px;
-    top: 0;
-  }
-
-  .x:hover {
-    cursor: pointer;
-  }
-
-  .popup-wrapper {
-    width: 100vw;
-    height: 100vh;
-    background-color: #efefef;
-
-    color: #b18d73;
-    font-size: 2rem;
-    line-height: 1.6;
-    font-weight: 400;
-    font-family: "Nunito Sans", sans-serif;
-    text-align: center;
-  }
-
-  body {
-    margin: 0;
-    padding: 0;
-  }
-
-  .onload-image {
-    width: 100%;
-    height: auto;
-  }
-  @media only screen and (min-width:320px) and (max-width:567px) {
-    .onload-image {
-    width: 80%;
-    height: auto;
-  }
-  .popup {
-    width: 690px;
-    min-width: 399px;
-    max-width: 40%;
-    min-height: 150px;
-    margin: 40px auto;
-    background: #fff;
-    opacity: 0.9;
-    position: relative;
-    z-index: 10;
-    padding: 15px 35px;
-    /* box-shadow: 0 2px 5px #000; */
-    border-radius: 29px;
-}
-  }
-  @media only screen and (min-width:568px) and (max-width:770px) {
-    .popup {
-    width: 800px;
-    min-width: 642px;
-    max-width: 74%;
-    min-height: 150px;
-    margin: 40px auto;
-    background: #fff;
-    opacity: 0.9;
-    position: relative;
-    z-index: 10;
-    padding: 15px 35px;
-    /* box-shadow: 0 2px 5px #000; */
-    border-radius: 29px;
-}
-  }
-</style>
-
- 
-<body>
-  <div class='popup-onload'>
-    <div class='popup'>
-      <a href='' class="x">x</a>
-      {% for onload_popup in on_load_popup|slice:":1" %}
-      <div style="height: auto;width: 400px;" class="mx-auto">
-        <img src="{{onload_popup.image.url}}" class="onload-image">
-      </div>
-      <div class="text-center py-3">
-        <span class="modal-desc">
-          {{onload_popup.title}}
-        </span>
-      </div>
-      {% endfor %}
-    </div>
-  </div>
-</body>
 
 <div class="main-panel " id="demo">
 
   <div class="content-wrapper" id="demo2">
-
-
-    <!-- service head display -->
     <section>
       <div class="row">
 
@@ -159,8 +20,6 @@
         </div>
         {% endfor %}
 
-
-
         {% comment %}
         <div class="col-lg-3 col-md-2 col-sm-4 col-4 pb-4">
           <div class="service-main-head text-center bg-gradient-danger">
@@ -169,9 +28,12 @@
         </div>
         {% endcomment %}
       </div>
-      <!-- <div class="text-center py-5 ">
+
+      <!-- 
+        <div class="text-center py-5 ">
         <a href="{% url 'services:serviceHead' %}" class="show-more badge-gradient-info">Show More</a>
-      </div> -->
+      </div>
+     -->
     </section>
 
     <!--news scrolling  -->
@@ -179,11 +41,11 @@
       <div class="alert alert-info">
         <span class="text1">
 
-          <marquee><b>{{latest_news.news}}</b>
+          <marquee>{{latest_news.news}}
             {% if not latest_news.link %}
             <span></span>
             {% else %}
-            <span> <a href="{{latest_news.link}}" rel="noopener noreferrer" target="_blank" class="news">Click
+            <span> <a href="{{latest_news.link}}" target="_blank" class="news">Click
                 Here</a></span>
             {% endif %}
           </marquee>
@@ -220,7 +82,7 @@
                   <span>{{posters.title}}</span>
 
                   <div class="text-center mt-3">
-                    <button class="btn-sm btn btn-primary" target="_blank" rel="noopener noreferrer" data-source="{{posters.id | apnumber }}">Download</button>
+                    <button class="btn-sm btn btn-primary generate" target="_blank" data-source="{{posters.id | apnumber }}">Download</button>
                     <a href="{{posters.detail_link}}" class="btn btn-info btn-sm">Details</a>
                   </div>
                   
@@ -239,7 +101,7 @@
 
                   <img class="img-responsive popup-imagea" id="result" src="">
                   <div class="text-center mt-3 poster-download-button">
-                    <a id="download" class="btn-sm mx-auto btn btn-primary" download>Download</a>
+                    <a class="btn-sm mx-auto btn btn-primary" download>Download</a>
                   </div>
                 </div>
                 <div class="close-btn">
@@ -261,7 +123,7 @@
                   <span>{{posters.title}}</span>
 
                   <div class="text-center mt-3">
-                    <button class="btn-sm btn btn-primary" target="_blank" rel="noopener noreferrer" data-source="{{posters.id | apnumber }}">Download</button>
+                    <button class="btn-sm btn btn-primary generate" target="_blank" data-source="{{posters.id | apnumber }}">Download</button>
                     <a href="{{posters.detail_link}}" class="btn btn-info btn-sm">Details</a>
                   </div>
 
@@ -281,52 +143,55 @@
       </div>
     </section>
 
-
-
-
+    {% include 'web/partials/popup.html' %}
   </div>
   <!-- content-wrapper ends -->
-
 </div>
-
-
 {% endblock %}
-
-
 
 
 {% block js %}
 <script>
-  function downloadImage(elm) {
+  function generateImage(elm) {
     var canvas = document.createElement('canvas');
     canvas.width = Width;
     canvas.height = headerImageHeight + footerImageHeight + HeightAdjustment;
     var ctx = canvas.getContext('2d');
-
+    var modalBody = document.querySelector('.modal-body');
+    modalBody.appendChild(canvas);
     var footerImage = document.getElementById('footerImage');
     var source = elm.getAttribute('data-source');
     var dataImage = document.querySelector(`img[data-id="${source}"]`)
-
     ctx.drawImage(dataImage, 0, 0, Width, headerImageHeight);
     ctx.drawImage(footerImage, 0, headerImageHeight + HeightAdjustment, Width, footerImageHeight);
 
-    var dataURL = canvas.toDataURL('image/png');
-    document.getElementById('result').src = dataURL;
-    document.getElementById('download').href = dataURL;
-    document.getElementById('resultContainer').style.display = 'block';
+    var modalFooter = document.querySelector('.modal-footer');
+    modalFooter.empty();
+
+    image = canvas.toDataURL("image/png", 1.0).replace("image/png", "image/octet-stream");
+    var link = document.createElement('a');
+    link.setAttribute('href', image);
+    link.setAttribute('download', 'image.png');
+    link.setAttribute('class', 'btn btn-primary d-block');
+    link.innerHTML = 'Download';
+    modalFooter.appendChild(link);
   }
 
-  var buttons = document.querySelectorAll('button');
+  var buttons = document.querySelectorAll('.generate');
   var Width = 1080; //> same width to both images
-  var headerImageHeight = 1080;
+  var headerImageHeight = 858;
   var footerImageHeight = 222;
   var HeightAdjustment = 0;
 
   buttons.forEach(function (button) {
     button.addEventListener('click', function () {
-      downloadImage(this);
+      $('.modal-body').empty();
+      $('#exampleModalCenter').modal('show');
+      generateImage(this);
     });
   });
+
+
 </script>
 <script>
   ! function (r, i) {
@@ -377,29 +242,4 @@
       }, "loading" !== r.readyState ? m() : (r.addEventListener("readystatechange", m), r.addEventListener("DOMContentLoaded", m))))
   }(document, window);
 </script>
-
-
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
-  integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
-  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>$(function () {
-    $(".popup-onload").show();
-    $(".close").click(function () {
-      $(".popup-onload").hide();
-      return false;
-    });
-    $(".x").click(function () {
-      $(".popup-onload").hide();
-      return false;
-    });
-    $(".popup-wrapper").click(function () {
-      $(".popup-onload").hide();
-      return false;
-    });
-  });
-</script>
-
-
 {% endblock %}
