--- a/templates/web/support.html
+++ b/templates/web/support.html
@@ -15,7 +15,18 @@
                     <p>പ്രിയ ഉഭഭോക്താവേ , <br>
                         USKLOGIN ഏജൻസി വഴി ഞങ്ങൾ നൽകുന്ന പ്രധാന സംവിധാനങ്ങൾ കൂടാതെ  ഒട്ടനധികം മറ്റു സേവനങ്ങൾ ഉണ്ട് . എന്നാൽ അത്തരം പൊതു സേവനങ്ങൾ അല്ലെങ്കിൽ ഓൺലൈൻ സേവനങ്ങൾക്ക് ഞങ്ങൾ യാതൊരു വിധത്തിലും സപ്പോർട്ട് നൽകുന്നില്ല. എന്നാൽ സേവനങ്ങൾക്ക് സപ്പോർട്ട് ആവിഷമെങ്കിൽ അതിന് വേണ്ട സൗകര്യങ്ങൾ (ട്രൈനിംഗ് ,ഹെൽപ്‌ഡെസ്‌ക് സപ്പോർട്ട്) പ്രീമിയം അടച്ചു സർവീസ് ഉൾപ്പെടുത്തുന്നവും. അതുമായി ബന്ധപ്പെട്ട വിവരങ്ങൾക്ക് MY ACCOUNT  ൽ ADD-ON SERVICES സന്ദർശിക്കുക.
                         
-                        ഇവിടെ കാണുന്ന സപ്പോർട്ട് ഓപ്‌ഷനുകൾ ഈ പോർട്ടൽ സംബന്ധിച്ചു ആവിശ്യമായ സപ്പോർട്ട് ലഭിക്കുന്നതിന് മാത്രം ഉപയോഗിക്കുക.</p>
+                        ഇവിടെ കാണുന്ന സപ്പോർട്ട് ഓപ്‌ഷനുകൾ ഈ പോർട്ടൽ സംബന്ധിച്ചു ആവിശ്യമായ സപ്പോർട്ട് ലഭിക്കുന്നതിന് മാത്രം ഉപയോഗിക്കുക. <br>
+                        REQUEST :-  എന്ന ബട്ടൺ ക്ലിക്ക് ചെയ്താൽ ലഭിക്കുന്ന ഫോമിൽ USK LOGIN എന്ന ഈ സംവിധാനം ഉപയോഗിച്ച ശേഷം ഉൾപ്പെടുത്തേണ്ടതായി നിങ്ങൾക്ക് തോന്നിയ കാര്യങ്ങൾ ഞങ്ങളെ അറിയിക്കുന്നതിനാണ്. <br>
+
+                        TICKET :- എന്ന ബട്ടൺ ക്ലിക്ക് ചെയ്താൽ ലഭിക്കുന്ന ഫോമിൽ USK LOGIN എന്ന ഈ സംവിധാനം ഉപയോഗിച്ചു കൊണ്ടിരിക്കുമ്പോൾ നിങ്ങൾക്ക് അനുഭവപ്പെട്ട  പ്രശ്നങ്ങളും പ്രയാസങ്ങളും ഞങ്ങളെ അറിയിക്കുന്നതിനാണ്. <br>
+                        
+                        TELEGRAM  :- എന്ന ബട്ടൺ  ക്ലിക്ക് ചെയ്ത് കൊണ്ട് USKLOGIN ഉപഭോക്താക്കൾ ഉൾപ്പെട്ടിട്ടുള്ള ടെലഗ്രാം ഗ്രൂപ്പിൽ നിങ്ങൾക്ക് ജോയിൻ ചെയ്യാവുന്നതാണ്. <br>
+                        
+                        FACEBOOK :- എന്ന ബട്ടൺ ക്ലിക്ക് ചെയ്ത് കൊണ്ട് USKLOGIN ഉപഭോക്താക്കൾ ഉൾപ്പെട്ടിട്ടുള്ള FACEBOOK കമ്മ്യൂണിറ്റിയിൽ നിങ്ങൾക്ക് ജോയിൻ ചെയ്യാവുന്നതാണ്. <br>
+                        
+                        FAQ :- ഒരു യൂസർക്ക് സാധരണ ഉണ്ടായേക്കാവുന്ന സംശയങ്ങളും മറുപടികളും <br>
+                        
+                        GUIDELINE :- USK LOGIN പോർട്ടൽ ഉപയോഗിക്കുന്നതിനെ കുറിച്ചും മെച്ചങ്ങളെ കുറിച്ചും വിശദീകരിക്കുന്ന വിഡിയോ</p>
                 </div>
             </div>
         </section>
