--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -9543,7 +9543,7 @@ a.close.disabled {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
-  padding: 0.9375rem;
+  padding:0px;
 }
 
 .modal-footer {
@@ -26167,5 +26167,3 @@ hr {
     }
 
   }
-
-
