--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -97,7 +97,7 @@
                                     </a>
                                 </div>
                             </div>
-                            {% if upgraded %}
+                            {% if subscription_validity.is_active %}
                             <div class="col-lg-12 col-md-12 col-sm-6 col-6">
                                 <div class="d-flex justify-content-between align-items-center experience">
                                     <a href="{% url 'web:call_support' %}">
