--- a/templates/web/important-posters.html
+++ b/templates/web/important-posters.html
@@ -12,20 +12,17 @@
         <div class="container">
   
           <div class="row">
-            {% for posters in important_posters %}
+            {% for obj in important_posters %}
   
             <div class="col-lg-3 col-md-4 col-sm-6 col-6">
               <div class="card card-body w-100">
-                <img src="{{posters.image.url}}" data-id="{{posters.id | apnumber }}" alt="Image">
-  
-                <div class="text-center mt-3">
-                  <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
-                    data-source="{{posters.id | apnumber }}">Click to Download</button>
+                <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+                <p class="my-1">{{obj.title}}</p>
+                <div class="text-center">
+                  <button class="btn-sm btn btn-primary generate" target="_blank"
+                    data-source="{{obj.id | apnumber }}">Download</button>
+                  <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
                 </div>
-                <div class="detail-button">
-                  <a href="{{posters.detail_link}}" style=" color: #fff;">Details</a>
-                </div>
-                <span>{{posters.title}}</span>
               </div>
             </div>
   
