--- a/templates/web/newly-addedd-services.html
+++ b/templates/web/newly-addedd-services.html
@@ -10,7 +10,19 @@
     <section>
         <h6 class="pb-2 service-heading">NEWLY ADDED SERVICES</h6>
         <div class="container">
-  
+          <div class="d-none">
+            <div class="service-heading">
+              <h5>Branding Image</h5>
+            </div>
+            <div class="container">
+              {% if branding_image.image %}
+              <img src="{{branding_image.image.crop.1000x100}}" id="footerImage" alt="Image">
+              {% else %}
+              <h4>....</h4>
+              {% endif %}
+            </div>
+          </div>
+      
           <div class="row">
   
             {% for obj in service_posters %}
